Agregando flex video

--- a/presentacion1/index.html
+++ b/presentacion1/index.html
@@ -3,6 +3,7 @@
 <title>Portfolio</title>
 <link rel="stylesheet" type="text/css" href="../res/bootstrap3/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="../res/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="../res/flex-video.css"/>
 <style>
 /** **/
 .dropdown:hover .dropdown-menu {
@@ -77,9 +78,8 @@
 
 		</div>
 		<div class="col-md-8">
-			<div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="http://youtube.com/embed/vCwpNgtm0bY"></iframe>
-</div>
+
+ <div class="flex-video widescreen"><iframe src="https://www.youtube-nocookie.com/embed/vCwpNgtm0bY" frameborder="0" allowfullscreen=""></iframe></div>
 		</div>
 	</div>
 
