Tabla de precios

--- a/presentacion1/index.html
+++ b/presentacion1/index.html
@@ -27,38 +27,15 @@
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Imagenes <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Pupulares</a></li>
-          <li><a href="#">Recientes</a></li>
-          <li><a href="#">Canales</a></li>
-        </ul>
-      </li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Canales <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Recientes</a></li>
-          <li><a href="#">Populares</a></li>
-          <li><a href="#">Nuevo canal</a></li>
-        </ul>
-      </li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> ...</b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Etiquetas</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Acerca de ...</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
-      </li>
+    <li><a href="">Productos</a></li>
+    <li><a href="">Compa&ntilde;a</a></li>
+    <li><a href="">Comprar</a></li>
+    <li><a href="">Probar</a></li>
 
       </ul>
 
    
     <ul class="nav navbar-nav navbar-right">
-    <li><a href="">Registrarse</a></li>
-    <li><a href="">Iniciar sesion</a></li>
       <li>
       <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
@@ -72,10 +49,23 @@
   </div>
 </header>
 <div class="container">
+<div class="row">
+	<div class="col-md-12">
+<ul class="nav nav-pills pull-right">
+  <li><a href="#">Vista previa</a></li>
+  <li><a href="#">Precios</a></li>
+  <li><a href="#">Que hay nuevo</a></li>
+</ul>
+	<h1>Producto</h1>
+	<hr>
+	</div>
+</div>
 <!-- - - - - - - lo nav pils - - - - - - - - -->
 	<div class="row">
 		<div class="col-md-4">
-
+		<h3>Presentacion del producto</h3>
+		<p class="lead">Este es un excelente producto, y esta es la descripcion del producto, si estas interesado.</p>
+		<a href="" class="btn btn-success">Compra Ya!</a>
 		</div>
 		<div class="col-md-8">
 
@@ -84,6 +74,34 @@
 	</div>
 
 <!-- - - - - - - lo nav pils - - - - - - - - -->
+</div>
+<div style="background:#f0f0f0;">
+<div class="container">
+<div class="row">
+	<div class="col-md-12">
+	<h2>Precios</h2>
+	<table class="table table-bordered table-hover">
+		<tr>
+			<td><center>Precio Uno<br><h3>$1,000.00</h3></center></td>
+			<td><center>Precio Uno<br><h3>$1,000.00</h3></center></td>
+			<td><center>Precio Uno<br><h3>$1,000.00</h3></center></td>
+			<td><center>Precio Uno<br><h3>$1,000.00</h3></center></td>
+			<td><center>Precio Uno<br><h3>$1,000.00</h3></center></td>
+
+		</tr>
+	</table>
+	<br>
+</div>
+</div>
+</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+<br><hr><br>
+</div>
+</div>
 </div>
 	<div class="footer">
 <div class="container">
